change Nuxt cli

--- a/package.json
+++ b/package.json
@@ -1,51 +1,30 @@
 {
   "name": "work-cli",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "My stupendous Nuxt.js project",
+  "author": "Vinson Yuan",
   "private": true,
   "scripts": {
-    "serve-dev": "vue-cli-service serve",
-    "build-dev": "vue-cli-service build",
-    "build-qc": "vue-cli-service build --mode qc",
-    "release": "vue-cli-service build --mode release",
-    "upload-dev": "gulp deploy --mode dev",
-    "upload-qc": "gulp deploy --mode qc",
-    "upload-release": "gulp deploy --mode release",
-    "lint": "vue-cli-service lint",
-    "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "register-service-worker": "^1.5.2",
-    "vue": "^2.5.22",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/dotenv": "^1.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.4.0",
-    "@vue/cli-plugin-unit-jest": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "@vue/eslint-config-prettier": "^4.0.1",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "axios": "^0.18.0",
-    "axios-extensions": "^3.0.5",
-    "babel-core": "7.0.0-bridge.0",
+    "@nuxtjs/eslint-config": "^1.0.1",
+    "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "gulp": "^4.0.0",
-    "gulp-sftp": "^0.1.5",
-    "gulp-util": "^3.0.8",
-    "lib-flexible": "^0.3.2",
-    "node-sass": "^4.11.0",
-    "postcss-pxtorem": "^4.0.1",
-    "qs": "^6.6.0",
-    "sass-loader": "^7.0.1",
-    "vinyl-ftp": "^0.6.1",
-    "vue-i18n": "^8.4.0",
-    "vue-template-compiler": "^2.5.22"
+    "eslint": "^6.1.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "^1.16.4"
   }
 }
