--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,13 @@
-# See: http://editorconfig.org
+# editorconfig.org
 root = true
 
 [*]
 indent_style = space
-indent_size = 4
-tab_width = 4
-# trim_trailing_whitespace = true
-# insert_final_newline = true
-
-# Matches the exact files either package.json or .travis.yml
-[{package.json,.travis.yml}]
-indent_style = space
 indent_size = 2
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
