--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "cross-env MODE=dev nuxt build",
     "start": "cross-env MODE=dev nuxt start",
     "generate": "cross-env MODE=dev nuxt generate",
-    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "test.com:dev": "cross-env MODE=local nuxt --config-file src/test.com/nuxt.config.js"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
