create project workspaces

--- a/package.json
+++ b/package.json
@@ -4,37 +4,36 @@
   "description": "My stupendous Nuxt.js project",
   "author": "Vinson Yuan",
   "private": true,
+  "workspaces": [
+    "src/elementui-site.com"
+  ],
   "scripts": {
-    "dev": "cross-env MODE=local nuxt",
-    "build": "cross-env MODE=dev nuxt build",
-    "start": "cross-env MODE=dev nuxt start",
-    "generate": "cross-env MODE=dev nuxt generate",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "sh": "./run.sh"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/axios": "^5.9.7",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/style-resources": "^1.0.0",
     "cross-env": "^7.0.2",
-    "nuxt": "^2.12.0",
-    "nuxt-i18n": "^6.6.1",
+    "nuxt": "^2.12.2",
+    "nuxt-i18n": "^6.7.2",
     "store": "^2.0.12",
     "vue-property-decorator": "^8.4.1"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.6.0",
+    "@nuxt/typescript-build": "^0.6.1",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@types/qs": "^6.9.0",
     "@types/store": "^2.0.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-nuxt": ">=0.5.2",
     "eslint-plugin-prettier": "^3.0.1",
     "node-sass": "^4.13.0",
-    "prettier": "^1.16.4",
+    "prettier": "^2.0.2",
     "pug": "2.0.4",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.0"
