--- a/package.json
+++ b/package.json
@@ -5,37 +5,36 @@
   "author": "Vinson Yuan",
   "private": true,
   "workspaces": [
-    "src/elementui-site.com"
+    "src/*"
   ],
   "scripts": {
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
-    "sh": "./run.sh"
+    "lintfix": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.9.7",
+    "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/style-resources": "^1.0.0",
     "cross-env": "^7.0.2",
-    "nuxt": "^2.12.2",
-    "nuxt-i18n": "^6.7.2",
+    "nuxt": "^2.13.3",
+    "nuxt-i18n": "^6.13.1",
     "store": "^2.0.12",
-    "vue-property-decorator": "^8.4.1"
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^9.0.0"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.6.1",
-    "@nuxtjs/eslint-config-typescript": "^1.0.0",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "@types/qs": "^6.9.0",
+    "@nuxt/types": "^2.13.3",
+    "@nuxt/typescript-build": "^2.0.0",
+    "@nuxtjs/eslint-config-typescript": "^2.0.0",
+    "@nuxtjs/proxy": "^2.0.0",
+    "@types/qs": "^6.9.3",
     "@types/store": "^2.0.2",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-nuxt": ">=0.5.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "node-sass": "^4.13.0",
-    "prettier": "^2.0.2",
-    "pug": "2.0.4",
+    "cross-var-no-babel": "^1.2.0",
+    "eslint": "^7.4.0",
+    "node-sass": "^4.14.1",
+    "pug": "3.0.0",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^9.0.2",
+    "ssh2-sftp-client": "^5.2.0"
   }
 }
