--- a/package.json
+++ b/package.json
@@ -12,29 +12,37 @@
     "lintfix": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.11.0",
+    "@nuxt/typescript-runtime": "^1.0.0",
+    "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/style-resources": "^1.0.0",
     "cross-env": "^7.0.2",
-    "nuxt": "^2.13.3",
-    "nuxt-i18n": "^6.13.1",
+    "nuxt": "^2.14.1",
+    "nuxt-i18n": "^6.13.6",
     "store": "^2.0.12",
-    "vue-class-component": "^7.2.3",
+    "vue-class-component": "^7.2.5",
     "vue-property-decorator": "^9.0.0"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.13.3",
+    "@nuxt/types": "^2.14.1",
     "@nuxt/typescript-build": "^2.0.0",
-    "@nuxtjs/eslint-config-typescript": "^2.0.0",
-    "@nuxtjs/proxy": "^2.0.0",
-    "@types/qs": "^6.9.3",
+    "@nuxtjs/eslint-config": "^3.1.0",
+    "@nuxtjs/eslint-config-typescript": "^3.0.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/proxy": "^2.0.1",
+    "@types/qs": "^6.9.4",
     "@types/store": "^2.0.2",
+    "babel-eslint": "^10.1.0",
     "cross-var-no-babel": "^1.2.0",
-    "eslint": "^7.4.0",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
     "pug": "3.0.0",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^9.0.2",
-    "ssh2-sftp-client": "^5.2.0"
+    "ssh2-sftp-client": "^5.2.1"
   }
 }
